takes care of overlapping highlighted nodes when there are hidden/collapsed nodes in a row. Separated the background rectangle that detects mouse over,out and click from the rectangle that is highlighted. Fixes #44

--- a/src/styles/_graph.scss
+++ b/src/styles/_graph.scss
@@ -55,7 +55,7 @@ $node-color: #4f4f4d;
     /*fill:none*/
 }
 
-.backgroundBar{
+.highlightBar{
 //     stroke:  #ffc800;
     stroke-width:0px;
     fill:#ffc800
@@ -124,7 +124,8 @@ rect.selected{
 .ageLabel,
 .nodeIcon,
 .lifeRect,
-.nodeLine{
+.nodeLine,
+.highlightBar{
 	pointer-events: none;
 }
 
